tests/spec/pass/list_methods.aja
nums = []
nums.append(3)
nums.append(1)
nums.append(2)
print(nums)
print(length(nums))
print(nums.has(1))
print(nums.has(9))
last = nums.pop()
print(last)
print(nums)
