tests/spec/fail/list_extend_wrong_arity.aja
nums = [1]
nums.extend()
